[tool.poetry]
name = "front-for-hw14"
version = "0.1.0"
description = ""
authors = ["Gennadiy Shpak <gena_shpak@ukr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
fastapi = "^0.111.0"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
